<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.marek.tabygoogla.MainActivity">
    <item
        android:id="@+id/action_call"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_call"
        android:title="@string/action_call"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_mail"
        android:orderInCategory="3"
        android:icon="@drawable/ic_action_mail"
        android:title="@string/action_mail"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_linkedin"
        android:orderInCategory="4"
        android:icon="@drawable/ic_action_linkedin"
        android:title="@string/action_linkedin"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_language"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_language"
        android:title="@string/action_language"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
