<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/ic_edu_uek2"
        android:id="@+id/edu_icon" />

    <TextView
        android:text="@string/edu_univ"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:paddingTop="5dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/edu_icon"
        android:id="@+id/edu_univ" />

    <TextView
        android:text="@string/edu_major"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:layout_below="@+id/edu_univ"
        android:layout_toEndOf="@+id/edu_icon"
        android:id="@+id/edu_major" />

    <TextView
        android:text="@string/edu_minor"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:id="@+id/edu_minor"
        android:paddingBottom="5dp"
        android:layout_alignBottom="@+id/edu_icon"
        android:layout_toEndOf="@+id/edu_icon" />
</RelativeLayout>